; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/uwb/extr_drp.c_uwb_drp_process_not_involved.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/uwb/extr_drp.c_uwb_drp_process_not_involved.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uwb_rc = type { i32 }
%struct.uwb_rc_evt_drp = type { i32 }
%struct.uwb_ie_drp = type { i32 }
%struct.uwb_mas_bm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uwb_rc*, %struct.uwb_rc_evt_drp*, %struct.uwb_ie_drp*)* @uwb_drp_process_not_involved to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uwb_drp_process_not_involved(%struct.uwb_rc* %0, %struct.uwb_rc_evt_drp* %1, %struct.uwb_ie_drp* %2) #0 {
  %4 = alloca %struct.uwb_rc*, align 8
  %5 = alloca %struct.uwb_rc_evt_drp*, align 8
  %6 = alloca %struct.uwb_ie_drp*, align 8
  %7 = alloca %struct.uwb_mas_bm, align 4
  store %struct.uwb_rc* %0, %struct.uwb_rc** %4, align 8
  store %struct.uwb_rc_evt_drp* %1, %struct.uwb_rc_evt_drp** %5, align 8
  store %struct.uwb_ie_drp* %2, %struct.uwb_ie_drp** %6, align 8
  %8 = load %struct.uwb_ie_drp*, %struct.uwb_ie_drp** %6, align 8
  %9 = call i32 @uwb_drp_ie_to_bm(%struct.uwb_mas_bm* %7, %struct.uwb_ie_drp* %8)
  %10 = load %struct.uwb_rc*, %struct.uwb_rc** %4, align 8
  %11 = load %struct.uwb_rc_evt_drp*, %struct.uwb_rc_evt_drp** %5, align 8
  %12 = load %struct.uwb_ie_drp*, %struct.uwb_ie_drp** %6, align 8
  %13 = call i32 @uwb_drp_handle_all_conflict_rsv(%struct.uwb_rc* %10, %struct.uwb_rc_evt_drp* %11, %struct.uwb_ie_drp* %12, %struct.uwb_mas_bm* %7)
  ret void
}

declare dso_local i32 @uwb_drp_ie_to_bm(%struct.uwb_mas_bm*, %struct.uwb_ie_drp*) #1

declare dso_local i32 @uwb_drp_handle_all_conflict_rsv(%struct.uwb_rc*, %struct.uwb_rc_evt_drp*, %struct.uwb_ie_drp*, %struct.uwb_mas_bm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
